[package]
name = "kpostgres_fixture"
version = "0.1.0"
authors = ["Ashkan Kiani <ashkan.k.kiani@gmail.com>"]
edition = "2018"

[dependencies]
dockworker = { version = "0.0.13", optional = true }
derive_more = "0.15.0"
postgres = "0.15.2"
log = "0.4.8"
rand = "0.7.0"

[features]
default = ["docker"]
docker = ["dockworker"]

[dev-dependencies]
env_logger = "0.6.2"
