[package]
name = "kpostgres_fixture"
version = "0.2.0"
authors = ["Ashkan Kiani <dev.kpostgres_fixture@kiani.io>"]
edition = "2018"
license = "MIT"
description = "Fixture for setting up a temporary database or a temporary postgres instance and running code in an isolated environment for testing"
keywords = ["postgres", "testing", "docker"]
homepage = "https://github.com/norcalli/kpostgres_fixture"
repository = "https://github.com/norcalli/kpostgres_fixture"

[dependencies]
dockworker = { version = "0.0.13", optional = true }
derive_more = "0.15.0"
postgres = "0.15.2"
log = "0.4.8"
rand = "0.7.0"

[features]
default = ["docker"]
docker = ["dockworker"]

[dev-dependencies]
env_logger = "0.6.2"
